# uuidxx

./: .gitignore  meson.build  uuidxx.cpp  uuidxx.h  uuidxx.vcxproj
src/: uuidxx.cpp  uuidxx.h
tests/: main.cpp
